components/Contact.module.scss
.contact {
    background: var(--color-bg);
    /* background: linear-gradient(to top, var(--color-bg-2), var(--color-bg)); */
    background-size: 100%;
    height: fit-content;
    width: 100%;
    padding-left: 5vw;
    padding-right: 5vw;
    padding-top: 10vh;
    padding-bottom: 10vh;
    text-align: center;
}

.title {
    color: var(--color-txt-pm-1);
    font-size: var(--font-size-xl);
    border-bottom: 1px solid var(--color-txt-sc-1);
    width: fit-content;
    margin: 0 auto 40px auto;
}

.contact_content {
    color: var(--color-txt-pm-1);
    font-size: clamp(var(--font-size-xs), 3vw, var(--font-size-m));
    width: 50%;
    margin: 0 auto 40px auto;
    h2 {
        color: var(--color-txt-sc-1)
    }
    @media (max-width: 1024px) {
        width: 60%;
    }
    @media (max-width: 768px) {
        width: 80%;
    }
}

.email_button {
    color: var(--color-txt-sc-2);
    font-size: var(--font-size-m);
    border: 2px solid var(--color-txt-sc-1);
    border-radius: 5px;
    padding: 10px;
    // margin-top: 20px;
    transition: var(--transition);
    margin: 0 auto 40px auto;
}

.email_button:hover {
    background-color: var(--color-bg-shadow);
    color: var(--color-txt-sc-1);
    transition: var(--transition);
    text-decoration: none;
}

